--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -27,22 +27,7 @@ layout: default
   {% include printmsgposts.html %}
 {% endunless %}
 
-<div class="page-break"></div>
-<div class="related">
-  <h2>Related Posts</h2>
-<ul>
-  {% for post in site.posts %}
-    {% if post.url != page.url %} 
-      {% for tag in page.tags %} 
-        {% if post.tags contains tag %}
-          <li><a href="{{ site.url }}{{ post.url }}">{{ post.title }}</a><br /></li>
-          {% break %}
-        {% endif %}
-      {% endfor %}
-    {% endif %}
-  {% endfor %}
-</ul>
-</div>
+{% include related_posts.html %}
 
 <div class="prevnext">
   {% if page.previous.url %}
