--- a/_includes/meta_info.html
+++ b/_includes/meta_info.html
@@ -1,4 +1,4 @@
-<span class="social-icons"><a href="{{ site.url }}{{ page.url }}#disqus_thread" class="social-icons" title="Comments"><i class="fa fa-comments"></i></a>{% endif %}
+<span class="social-icons">{% if page.comments %}<a href="{{ site.url }}{{ page.url }}#disqus_thread" class="social-icons" title="Comments"><i class="fa fa-comments"></i></a>{% endif %}
 {% if page.category contains "featured" %}<a href="{{ site.url }}/featured" title="Featured posts"><i class="fa fa-paperclip" title="Featured" class="social-icons" style="vertical-align: top;"></i></a>{% endif %}
 <a href="javascript:window.print()" class="social-icons" title="Printer friendly format"><i class="fa fa-print"></i></a>
 </span>
