--- a/_includes/disqus_comments.html
+++ b/_includes/disqus_comments.html
@@ -1,7 +1,7 @@
 <script type="text/javascript">
     /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
-    var disqus_shortname = 'ykkim123'; 
-    var disqus_identifier = 'https://ykkim123.github.io';
+    var disqus_shortname = '{{ site.disqus_shortname }}'; 
+    var disqus_identifier = '{{ site.url }}{{ page.url }}';
 
     /* * * DON'T EDIT BELOW THIS LINE * * */
     (function() {
